Update build-macos.sh